Fix submit button location on narrow screens

--- a/relate/static/css/style.css
+++ b/relate/static/css/style.css
@@ -35,6 +35,7 @@ table.past-flow-session-table {
 }
 
 .relate-flow-submit {
+  float: right;
   margin-top: 6px;
 }
 
